fully functional, needs styling

--- a/client/src/components/NavBar/NavBar.scss
+++ b/client/src/components/NavBar/NavBar.scss
@@ -24,4 +24,9 @@ header {
       transition: text-decoration-color 400ms ease-in;
     }
   }
+
+  img {
+    height: 9vh;
+    border-radius: 50%;
+  }
 }
