--- a/client/src/components/Message/Message.scss
+++ b/client/src/components/Message/Message.scss
@@ -1,1 +1,71 @@
+@use "../../theme";
 
+.message-card {
+  height: fit-content;
+  width: 70vw;
+  @include theme.flex-column-center;
+  margin-bottom: 1rem;
+  border: 1px solid grey;
+
+  .image-author {
+    width: 100%;
+    background-color: lightgrey;
+    height: 12vh;
+    line-height: 12vh;
+    display: flex;
+    padding: 1vh;
+
+    h2 {
+      display: inline;
+      margin: auto;
+    }
+
+    img {
+      height: 9vh;
+      width: 9vh;
+      border-radius: 50%;
+    }
+  }
+
+  .title {
+    background-color: grey;
+    color: whitesmoke;
+    width: 100%;
+    padding: 0 1rem;
+  }
+
+  .body {
+    width: 100%;
+    height: fit-content;
+    padding: 1rem;
+    text-align: left;
+    border-bottom: 1px solid grey;
+  }
+
+  .date-time {
+    font-size: 0.7rem;
+    width: 100%;
+    text-align: right;
+
+    p {
+      display: inline;
+    }
+  }
+
+  .delete {
+    width: fit-content;
+    margin: 1rem 0;
+    span {
+      color: red;
+      opacity: 0;
+      position: absolute;
+      margin-left: 1rem;
+    }
+  }
+
+  .guest {
+    &:hover span {
+      opacity: 1;
+    }
+  }
+}
