--- a/client/src/components/Message/Message.scss
+++ b/client/src/components/Message/Message.scss
@@ -3,6 +3,7 @@
 .message-card {
   height: fit-content;
   width: 70vw;
+  max-width: 40rem;
   @include theme.flex-column-center;
   margin-bottom: 1rem;
   border: 1px solid grey;
@@ -57,6 +58,8 @@
     width: fit-content;
     margin: 1rem 0;
     span {
+      display: block;
+      font-size: .6rem;
       color: red;
       opacity: 0;
       position: absolute;
