--- a/client/src/components/NavBar/NavBar.scss
+++ b/client/src/components/NavBar/NavBar.scss
@@ -1,12 +1,13 @@
 header {
-  height: 10vh;
+  height: 30vh;
   width: 100vw;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
   background-color: lightgrey;
   nav {
-    width: 50vw;
+    width: 100vw;
+    height: 8vh;
     display: flex;
     justify-content: space-around;
 
@@ -28,5 +29,19 @@ header {
   img {
     height: 9vh;
     border-radius: 50%;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  header {
+    flex-direction: row;
+    height: 10vh;
+    justify-content: space-around;
+  }
+
+  nav {
+    width: 50vw !important;
+    height: 10vh !important;
+    line-height: 10vh;
   }
 }
